fix(icon): restore readable docs and token styling

--- a/packages/react/src/icon/Icon.css
+++ b/packages/react/src/icon/Icon.css
@@ -1,1 +1,1 @@
-.ds-icon{display:inline-block;flex:0 0 auto;vertical-align:-0.125em}.ds-icon[data-size='16']{width:var(--ds-size-icon-small);height:var(--ds-size-icon-small)}.ds-icon[data-size='20']{width:var(--ds-size-icon-medium);height:var(--ds-size-icon-medium)}.ds-icon[data-size='24']{width:var(--ds-size-icon-large);height:var(--ds-size-icon-large)}
+.ds-icon{display:inline-block;flex:0 0 auto;vertical-align:-0.125em;color:var(--ds-color-text-primary)}.ds-icon[data-size='16']{width:var(--ds-size-icon-small);height:var(--ds-size-icon-small)}.ds-icon[data-size='20']{width:var(--ds-size-icon-medium);height:var(--ds-size-icon-medium)}.ds-icon[data-size='24']{width:var(--ds-size-icon-large);height:var(--ds-size-icon-large)}
